--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --require test/setup.js",
-    "dev": "nodemon src/server.js",
-    "start": "node src/server.js",
+    "start": "nodemon src/server.js",
+    "migrate": "postgrator --config postgrator-config.js",
     "predeploy": "npm audit",
     "deploy": "git push heroku master"
   },
@@ -18,7 +18,9 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "helmet": "^3.15.1",
+    "knex": "^0.16.3",
     "morgan": "^1.9.1",
+    "pg": "^7.8.1",
     "uuid": "^3.3.2",
     "winston": "^3.2.1"
   },
@@ -26,6 +28,7 @@
     "chai": "^4.2.0",
     "mocha": "^6.0.1",
     "nodemon": "^1.18.10",
+    "postgrator-cli": "^3.1.0",
     "supertest": "^3.4.2"
   }
 }
